--- a/app/src/main/res/layout/development_tracker_fragment.xml
+++ b/app/src/main/res/layout/development_tracker_fragment.xml
@@ -50,20 +50,16 @@
                         android:id="@+id/tracker_list_recycler_view"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
-                        android:layout_marginStart="8dp"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginEnd="8dp"
-                        android:layout_marginBottom="8dp"
                         android:orientation="vertical"
                         android:visibility="visible"
                         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                        app:layout_constraintBottom_toTopOf="@+id/music_player_layout"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:spanCount="2"
+                        tools:layout_editor_absoluteX="8dp"
                         tools:listitem="@layout/poem_list_item"
                         tools:visibility="visible" />
+
 
 
                     <LinearLayout
@@ -95,41 +91,42 @@
 
                     </LinearLayout>
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        >
-
-                        <com.google.android.material.button.MaterialButton
-                            android:id="@+id/fillForm"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Fill form"
-                            android:visibility="gone"
-                            android:background="@color/buttonBlue">
-                        </com.google.android.material.button.MaterialButton>
 
 
-                        <com.google.android.material.button.MaterialButton
-                            android:id="@+id/upgradeButton"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:visibility="gone"
-                            android:text="@string/upgrade"
-                            android:background="@color/buttonBlue">
-                        </com.google.android.material.button.MaterialButton>
-
-
-
-                    </LinearLayout>
 
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
         </androidx.core.widget.NestedScrollView>
+        <LinearLayout
+            android:id="@+id/bottomLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="bottom"
+            >
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/fillForm"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Fill form"
+                android:visibility="gone"
+                android:background="@color/buttonBlue">
+            </com.google.android.material.button.MaterialButton>
+
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/upgradeButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/upgrade"
+                android:visibility="gone"
+                android:background="@color/buttonBlue">
+            </com.google.android.material.button.MaterialButton>
+
+
+
+        </LinearLayout>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
