--- a/app/src/main/res/layout/question_form_question_item.xml
+++ b/app/src/main/res/layout/question_form_question_item.xml
@@ -61,6 +61,8 @@
             android:layout_height="wrap_content"
             android:background="@drawable/bg_border"
             android:layout_marginVertical="8dp"
+            android:gravity="start"
+            android:padding="8dp"
             android:minLines="6"
             />
 
