--- a/app/src/main/res/layout/development_tracker_recycler_view_item.xml
+++ b/app/src/main/res/layout/development_tracker_recycler_view_item.xml
@@ -14,7 +14,6 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginVertical="8dp"
-
         app:cardBackgroundColor="@color/light_blue"
         app:cardElevation="0dp"
         app:cardCornerRadius="16dp">
@@ -26,14 +25,15 @@
             <com.makeramen.roundedimageview.RoundedImageView
                 android:id="@+id/poem_item_image"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="110dp"
                 android:background="@android:color/transparent"
-                android:src="@drawable/kit_tutorial_icon"
+                android:src="@drawable/doctor_expert_counselling"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                android:scaleType="fitXY"
                 app:riv_corner_radius="15dp"
-                tools:src="@drawable/kit_tutorial_icon" />
+                tools:src="@drawable/doctor_expert_counselling" />
 
 
             <LinearLayout
