--- a/app/src/main/res/layout/development_tracker_recycler_view_item.xml
+++ b/app/src/main/res/layout/development_tracker_recycler_view_item.xml
@@ -40,6 +40,8 @@
                 android:layout_width="match_parent"
                 android:orientation="vertical"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="6dp"
+                android:layout_marginBottom="6dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/poem_item_image"
                 app:layout_constraintStart_toStartOf="@+id/poem_item_image"
@@ -52,6 +54,7 @@
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
                     android:textAlignment="center"
+                    android:textSize="16sp"
                     android:textAppearance="@style/AppTheme.TextAppearance.Body2"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@+id/poem_item_image"
@@ -59,11 +62,15 @@
                     app:layout_constraintTop_toBottomOf="@id/poem_item_image"
                     tools:text="Month-1 Details" />
                 <TextView
+                    android:id="@+id/date"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textAlignment="center"
-                    android:textColor="@color/brown_lg"
+                    android:textColor="@color/red"
+                    android:textStyle="bold"
                     android:text="View Details"
+                    android:textSize="13sp"
+                    android:layout_marginTop="5dp"
                     android:layout_marginBottom="4dp"
                     android:textAppearance="@style/AppTheme.TextAppearance.Body2"
                     app:layout_constraintBottom_toBottomOf="parent"
