--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -39,6 +39,7 @@
     <color name="solidButtonColor">#4CB8CB</color>
     <color name="solidUpColor">#4C86CB</color>
     <color name="passwordErrorText">#ff0000</color>
+    <color name="red">#D7CC2323</color>
     <color name="formFieldHeading">#787878</color>
     <color name="link">#3D9FF4</color>
     <color name="meet_color">#FC9290</color>
