--- a/app/src/main/res/layout/activity_podcast_webinar.xml
+++ b/app/src/main/res/layout/activity_podcast_webinar.xml
@@ -11,11 +11,6 @@
         android:id="@+id/layout">
 
 
-
-
-
-
-
         <com.google.android.youtube.player.YouTubePlayerView
             android:id="@+id/videoView"
             android:layout_width="match_parent"
@@ -30,7 +25,7 @@
         <ScrollView
             android:id="@+id/scrollView3"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="@id/btnPlayPause"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -80,7 +75,7 @@
                     android:layout_marginTop="32dp"
                     android:text="Title"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
+                    android:textSize="18sp"
                     android:textStyle="bold"
                  />
 
@@ -112,6 +107,36 @@
             </LinearLayout>
         </ScrollView>
 
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/suggestedVideoTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Suggested Videos"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp"
+            android:textColor="@color/activeBlue"
+            android:textStyle="bold"
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/scrollView3"/>
+
+        <ScrollView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/suggestedVideoTxt">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/sugVideoRecView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                tools:itemCount="3"
+                tools:listitem="@layout/suggested_video_item"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+        </ScrollView>
+
+
         <Button
             android:id="@+id/btnPlayPause"
             android:layout_width="0dp"
@@ -124,7 +149,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/scrollView3"
             app:layout_constraintVertical_bias="1.0" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
