--- a/app/src/main/res/layout-v23/order_item_view.xml
+++ b/app/src/main/res/layout-v23/order_item_view.xml
@@ -10,58 +10,6 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#f0f0f0">
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:fontFamily="@font/montserrat"
-            android:text="@string/order_no_caps"
-            android:textColor="#888888"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
-
-        <TextView
-            android:id="@+id/textView_orderNo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:fontFamily="@font/montserrat"
-            android:textColor="#000000"
-            android:textSize="12sp"
-            android:layout_marginStart="5dp"
-            app:layout_constraintStart_toEndOf="@+id/textView2"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
-
-        <TextView
-            android:id="@+id/textView_monthNo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:fontFamily="@font/montserrat"
-            android:textColor="@color/textGrey"
-            android:textSize="14sp"
-            app:layout_constraintHorizontal_bias="0.8"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/textView_orderNo"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:background="#ffffff">
 
         <TextView
@@ -72,9 +20,8 @@
             android:fontFamily="@font/montserrat"
             android:text="@string/product_name_qty"
             android:textColor="@color/textGrey"
-            android:textSize="12.5sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.1"
+            android:layout_marginStart="16dp"
+            android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -82,48 +29,41 @@
             android:id="@+id/textView_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
             android:fontFamily="@font/montserrat"
             android:text="@string/date"
             android:textColor="#888888"
-            android:textSize="12.5sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.891"
+            android:textSize="14sp"
+            android:layout_marginStart="16dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView_productNameAndQty" />
+            app:layout_constraintTop_toBottomOf="@+id/textView_deliveryStatus" />
 
         <TextView
             android:id="@+id/textView_deliveryStatus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
             android:fontFamily="@font/montserrat"
-            android:text="@string/delivery_status"
+            android:text="@string/date"
             android:textColor="@color/textGrey"
-            android:textSize="12.5sp"
-            app:layout_constraintEnd_toStartOf="@+id/textView_date"
+            android:textSize="14sp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView_productNameAndQty" />
 
         <Button
             android:id="@+id/button_viewDetails"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:layout_marginBottom="10dp"
             android:background="@drawable/rounded_corners_button"
             android:fontFamily="@font/montserrat"
-            android:paddingStart="32dp"
-            android:paddingEnd="32dp"
             android:text="@string/view_details"
             android:textAllCaps="false"
             android:textColor="#ffffff"
             android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.9"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView_date" />
+            android:layout_marginEnd="16dp"
+            app:layout_constraintTop_toTopOf="@id/textView_productNameAndQty"
+            app:layout_constraintBottom_toBottomOf="@id/textView_date"
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <Button
             android:id="@+id/button_download"
@@ -136,6 +76,17 @@
             app:layout_constraintStart_toStartOf="@id/button_viewDetails"
             app:layout_constraintTop_toTopOf="@id/button_viewDetails"
             app:layout_constraintBottom_toBottomOf="@id/button_viewDetails"/>
+
+        <View
+            android:id="@+id/divider2"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="?android:attr/listDivider"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintTop_toBottomOf="@id/textView_date"/>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
