--- a/app/src/main/res/layout/expert_team_fragment.xml
+++ b/app/src/main/res/layout/expert_team_fragment.xml
@@ -14,21 +14,31 @@
         android:layout_height="match_parent"
         tools:context=".support.all.expert.ExpertTeam">
 
-
         <Button
-            android:id="@+id/generate_new_ticket"
-            android:layout_width="wrap_content"
+            android:id="@+id/generate_support_ticket"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="32dp"
             android:background="@drawable/round_button_new_ticket"
-            android:paddingStart="32dp"
-            android:paddingEnd="32dp"
-            android:text="@string/generate_new_ticket"
+            android:text="Raise support ticket"
             android:textAllCaps="false"
             android:textColor="#fff"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/generate_expert_ticket"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/round_button_new_ticket"
+            android:text="Raise expert ticket"
+            android:textAllCaps="false"
+            android:textColor="#fff"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/generate_support_ticket"/>
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="0dp"
@@ -38,7 +48,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/generate_new_ticket">
+            app:layout_constraintTop_toBottomOf="@+id/generate_expert_ticket">
 
             <LinearLayout
                 android:id="@+id/ticket_list_layout"
