--- a/app/src/main/res/layout/ticket_list_item.xml
+++ b/app/src/main/res/layout/ticket_list_item.xml
@@ -7,24 +7,23 @@
 
     <TextView
         android:id="@+id/ticket_item_title"
-        android:layout_width="200dp"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
         android:ellipsize="end"
         android:maxLines="1"
         android:text="skkakssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/type_ticket"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@id/status_show" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/status_show"
         android:layout_width="60dp"
         android:layout_height="18dp"
+        android:layout_marginTop="16dp"
         android:layout_marginStart="5dp"
         android:background="@drawable/round_rectangle"
         android:text="open"
@@ -32,21 +31,48 @@
         android:textColor="@color/white"
         android:textSize="8sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ticket_item_title"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/type_ticket"
+        android:layout_width="60dp"
+        android:layout_height="22dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="16dp"
+        android:paddingHorizontal="5dp"
+        android:background="@drawable/round_rectangle"
+        android:text="Expert"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="8sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/status_show"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/ticket_item_title" />
 
 
     <TextView
         android:id="@+id/ticket_item_details"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
         android:text="Details"
         android:textColor="#3ea6e4"
         app:layout_constraintBottom_toBottomOf="@+id/ticket_item_title"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/status_show"
         app:layout_constraintTop_toTopOf="@+id/ticket_item_title" />
+
+    <ImageView
+        android:id="@+id/arrowBtn"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:src="@mipmap/arrow_right_round"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/status_show"
+        app:layout_constraintBottom_toBottomOf="@id/type_ticket"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/ticket_item_details_layout"
