Temporarily removed Drawable missing files

--- a/app/src/main/res/navigation/todos_navigation.xml
+++ b/app/src/main/res/navigation/todos_navigation.xml
@@ -358,10 +358,13 @@
         <action
             android:id="@+id/action_homePageFragment_to_accountFragment2"
             app:destination="@id/accountFragment2"
-            app:enterAnim="@anim/slide_in_left"
-            app:exitAnim="@anim/slide_out_right"
-            app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"/>
+            />
+
+<!--        app:enterAnim="@anim/slide_in_left"-->
+<!--        app:exitAnim="@anim/slide_out_right"-->
+<!--        app:popEnterAnim="@anim/slide_in_left"-->
+<!--        app:popExitAnim="@anim/slide_out_right"-->
+
         <action
             android:id="@+id/action_homePageFragment_to_recipeFragment"
             app:destination="@id/recipeFragment" />
