--- a/app/src/main/res/layout/ticket_list_item.xml
+++ b/app/src/main/res/layout/ticket_list_item.xml
@@ -23,8 +23,8 @@
         android:id="@+id/status_show"
         android:layout_width="60dp"
         android:layout_height="18dp"
-        android:layout_marginTop="16dp"
         android:layout_marginStart="5dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/round_rectangle"
         android:text="open"
         android:textAllCaps="false"
@@ -41,16 +41,16 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="16dp"
-        android:paddingHorizontal="5dp"
         android:background="@drawable/round_rectangle"
+        android:paddingHorizontal="5dp"
         android:text="Expert"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="8sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/status_show"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/ticket_item_title" />
+        app:layout_constraintStart_toEndOf="@+id/ticket_item_title"
+        app:layout_constraintTop_toBottomOf="@id/status_show" />
 
 
     <TextView
@@ -68,12 +68,13 @@
         android:id="@+id/arrowBtn"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:src="@mipmap/arrow_right_round"
         android:layout_marginEnd="8dp"
+        android:src="@drawable/arrow"
+        app:tint="@color/black"
+        app:layout_constraintBottom_toBottomOf="@id/type_ticket"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/status_show"
-        app:layout_constraintBottom_toBottomOf="@id/type_ticket"/>
-
+        app:layout_constraintTop_toTopOf="@+id/status_show" />
+    <!--    android:src="@mipmap/arrow_right_round"-->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/ticket_item_details_layout"
         android:layout_width="match_parent"
